- Implementation of namespace based ViewModel - Implemented focusmanager class to auto set focus on navigation events - Implementation of stack based navigation controller to handle push and pop operations - Heavily under testing, not-stable

--- a/RokuStarterKit/bsconfig.json
+++ b/RokuStarterKit/bsconfig.json
@@ -4,6 +4,12 @@
     "retainStagingDir": true,
     "createPackage": true,
     "sourceMap": true,
-    "allowBrighterScriptInBrightScript": false,
-    "autoImportComponentScript": true
+    "allowBrighterScriptInBrightScript": true,
+    "autoImportComponentScript": true,
+    "files": [
+        "manifest",
+        "source/**/*.*",
+        "components/**/*.*",
+        "images/**/*.*"
+    ]
 }
