-Removed redundant print statements -Added promise library with example api call in main scene

--- a/RokuStarterKit/package.json
+++ b/RokuStarterKit/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "brighterscript": "^0.65.2"
+  "devDependencies": {
+    "brighterscript": "^0.65.17"
   }
 }
